--- a/src/components/UserEdit/UserEdit.scss
+++ b/src/components/UserEdit/UserEdit.scss
@@ -37,6 +37,9 @@
         border-radius: 50%;
         display: inline;
       }
+      input{
+        padding-left: 20px;
+      }
     }
 
     &_user {
