--- a/src/components/BlogIT/Blog.scss
+++ b/src/components/BlogIT/Blog.scss
@@ -59,3 +59,53 @@
 
 
 }
+.profile-tab {
+  border-color: #005282;
+  border-style: solid;
+  border-width: 1px 0px 0px;
+  box-shadow: #000000 0px 0.1px 0px;
+  color: #ffffff;
+  font-size: 14px;
+  line-height: 22.4px;
+  text-align: left;
+background-color:#0b1a33;
+
+  &_item {
+    height: 45px;
+    width: 1200px;
+    display: flex;
+    margin: 0px 352.5px;
+
+    &_link {
+      width: 125px;
+      height: 43px;
+      font-weight: 700;
+      padding: 13px 14px 8px;
+      color: #ffffff;
+
+    }
+
+    &_link:hover {
+      color: #5488c7;
+    }
+  }
+}
+
+.text-center{
+  width: 1905px;
+  height:54px;
+  background:linear-gradient(to right, #8360c3, #2ebf91);
+  color: #ffffff;
+  font-size: 18.288px;
+  font-weight: 700;
+  line-height: 21.9456px;
+  margin: 0px 0px 8px;
+  padding: 16px 0px;
+  text-align: center;
+&_body{
+    width: 682px;
+  height:21px;
+  display: inline;
+color: #ffffff;
+  }
+}
