--- a/src/components/BlogIT/Blog.scss
+++ b/src/components/BlogIT/Blog.scss
@@ -3,62 +3,66 @@
   text-align: left;
 
   &_image {
-    img {
+    &_banner {
       width: 100%;
-      height: 168px;
       color: #33629c;
       font-size: 14px;
       line-height: 22.4px;
+      height: 278px;
+      object-fit: cover;
     }
 
   }
-  &_bg{
-  width:1905px;
-    height:67px;
+
+  &_bg {
+    width: 1905px;
+    height: 67px;
     background-color: #0b1a33;
     color: #1b1b1b;
-    font-size:14px;
+    font-size: 14px;
     line-height: 22.4px;
-    padding:16px 0px;
-      text-align: left;
-    &_row{
-      height:35px;
-      width:1140px;
+    padding: 16px 0px;
+    text-align: left;
+
+    &_row {
+      height: 35px;
+      width: 1140px;
       align-items: center;
       display: flex;
       flex-wrap: wrap;
-      font-size:14px;
+      font-size: 14px;
       justify-content: space-between;
-      margin:0px -15px;
+      margin: 0px -15px;
 
-       ul{
-      width: 825px;
-      height:37px;
-      align-items: center;
-      display: flex;
-      font-size:14px;
-      justify-content: flex-start;
+      ul {
+        width: 825px;
+        height: 37px;
+        align-items: center;
+        display: flex;
+        font-size: 14px;
+        justify-content: flex-start;
         text-align: left;
-      line-height:22.4px;
+        line-height: 22.4px;
 
-      a{
-        width:93px;
-        height:20px;
-        color: #ffffff;
-        font-size:12.6px;
-        font-weight:700;
-        line-height:20.16px;
-        text-transform: uppercase;
+        a {
+          width: 93px;
+          height: 20px;
+          color: #ffffff;
+          font-size: 12.6px;
+          font-weight: 700;
+          line-height: 20.16px;
+          text-transform: uppercase;
           text-align: left;
 
+        }
       }
-    }
     }
 
   }
 
 
 }
+
 .profile-tab {
   border-color: #005282;
   border-style: solid;
@@ -68,7 +72,7 @@
   font-size: 14px;
   line-height: 22.4px;
   text-align: left;
-background-color:#0b1a33;
+  background-color: #0b1a33;
 
   &_item {
     height: 45px;
@@ -91,10 +95,10 @@ background-color:#0b1a33;
   }
 }
 
-.text-center{
+.text-center {
   width: 1905px;
-  height:54px;
-  background:linear-gradient(to right, #8360c3, #2ebf91);
+  height: 54px;
+  background: linear-gradient(to right, #8360c3, #2ebf91);
   color: #ffffff;
   font-size: 18.288px;
   font-weight: 700;
@@ -102,10 +106,142 @@ background-color:#0b1a33;
   margin: 0px 0px 8px;
   padding: 16px 0px;
   text-align: center;
-&_body{
+
+  &_body {
     width: 682px;
-  height:21px;
-  display: inline;
-color: #ffffff;
+    height: 21px;
+    display: inline;
+    color: #ffffff;
   }
+}
+
+.body-post {
+  height: 143px;
+  width: 840px;
+  align-items: flex-start;
+  color: #1b1b1b;
+  display: flex;
+  font-size: 14px;
+  line-height: 22.4px;
+  padding: 8px;
+  text-align: left;
+
+  border-style: hidden;
+  box-shadow: #a17d7d 0 0.5px 0px 0px;
+  border-width:1px 0px 0.5px;
+
+  &_img {
+    width: 37px;
+    height: 37px;
+    border-radius: 100%;
+    color: #33629c;
+    font-size: 14px;
+
+  }
+
+  &_feed {
+    height: 103px;
+    font-size: 14px;
+
+    &_meta {
+      width: 779px;
+      height: 20px;
+      align-items: center;
+      color: #1b1b1b;
+      display: flex;
+      flex-wrap: wrap;
+      font-size: 12.8px;
+      line-height: 20.48px;
+      margin: 0px 0px 4px;
+
+      &_user {
+        height: 15px;
+        color: #33629c;
+        display: inline;
+        margin: 0px 8px 0px 0px;
+      }
+
+      &_link {
+
+        height: 15px;
+        color: #9b9b9b;
+        display: inline;
+        margin: 0px 8px 0px 0px;
+
+      }
+    }
+
+    &_title {
+      height: 56px;
+      width: 779px;
+
+      &_word {
+        font-size: 17.6px;
+        font-weight: 500;
+        line-height: 21.12px;
+        margin: 0px 8px 0px 0px;
+
+        &_tags {
+          height: 26px;
+          width: 426px;
+          color: #1b1b1b;
+
+          &_cate {
+            font-size: 35%;
+          }
+        }
+      }
+    }
+
+    &_stats {
+      &_item {
+        width: 49px;
+        height: 16px;
+        color: #9b9b9b;
+        display: inline;
+        font-size: 14px;
+        margin: 0px 10px 0px 0px;
+      }
+    }
+  }
+}
+
+.sticky {
+  height: 855px;
+  width: 285px;
+  color: #1b1b1b;
+  font-size: 14px;
+  line-height: 22.4px;
+  padding: 0px 8px 0px 0px;
+  text-align: left;
+
+  &_section {
+    display: flex;
+    width: 277px;
+    height: 33px;
+
+    &_a {
+      width: 142px;
+      height: 33px;
+      color: #33629c;
+
+      &_h4 {
+        height: 19px;
+        font-weight: 500;
+        line-height: 19.2px;
+        margin: 0px 0px 8px;
+        text-transform: uppercase;
+        font-size: 14px;
+      }
+    }
+  }
+}
+
+.sticky-section_a_h4 {
+  font-size: 14px;
+}
+
+.body-pagination {
+  text-align: center;
+  display: inline-block;
 }
