--- a/src/components/Forum/Forum.scss
+++ b/src/components/Forum/Forum.scss
@@ -174,13 +174,14 @@ padding-left:12px;
         margin:12px 0px 0px;
         text-align:justify;
         position: absolute;
-        display: none;
+        //display: none;
         z-index: 1000;
         &_user{
           width:343px;
           height: 75px;
           justify-content:space-around;
           &_a{
+
             width:86px;
             height: 67px;
             color:#33629c;
@@ -239,7 +240,7 @@ padding-left:12px;
       }
        &_user:hover div{
 
-            display: block;
+            //display: block;
 
         }
       &_link {
