--- a/src/components/BlogIT/Blog.scss
+++ b/src/components/BlogIT/Blog.scss
@@ -96,7 +96,7 @@
 }
 
 .text-center {
-  width: 1905px;
+  width: 100%;
   height: 54px;
   background: linear-gradient(to right, #8360c3, #2ebf91);
   color: #ffffff;
