--- a/src/components/Userinfo/User.scss
+++ b/src/components/Userinfo/User.scss
@@ -4,8 +4,7 @@
   margin: 0px 352.5px;
   padding: 32px 15px;
   text-align: left;
-  width: 1200px;
-  height: 154px;
+  width: 65%;
 
   &_card {
     align-items: center;
