--- a/src/components/BlogIT/BlogDetail.scss
+++ b/src/components/BlogIT/BlogDetail.scss
@@ -150,3 +150,77 @@
   line-height: 22.4px;
   text-align: left;
 }
+
+.artice-show {
+  height: 756px;
+  color: #171717;
+  display: grid;
+  gap: 16px;
+  grid-template-columns:345.609px;
+  grid-template-rows:416px 324px;
+  line-height: 24px;
+
+  &_card {
+    height: 416px;
+    background-color: #fafafa;
+    border-color: #190aa4;
+    border-radius:2%;
+
+    border-style: solid none none;
+    border-width: 32px 0px 0px;
+    box-shadow: #171717 0px 0px 0px 1px;
+    display: grid;
+    gap: 16px;
+    grid-template-columns:313.609px;
+    grid-template-rows:34px 40px 96px 150px;
+    line-height: 24px;
+    padding: 0px 16px 16px;
+
+    &_flex {
+      height: 50px;
+      color:#3b49df;
+      display: flex;
+    &_avatar{
+      width:48px;
+      height:48px;
+      border-radius: 100%;
+      color:#3b49df;
+      display: inline-block;
+    }
+      &_link{
+        color:#2f3ab2;
+        font-size:20px;
+        font-weight:700;
+        line-height:30px;
+        margin: 5px 0px 12px 8px;
+
+
+      }
+    }
+    &_follow{
+      height: 40px;
+      align-items: flex-start;
+background-color: #3b49df;
+border-radius: 6px;
+box-shadow: #000000 0px 1px 3px 0px;
+color: #f9f9f9;
+display: inline-block;
+font-family: -apple-system;
+font-weight: 500;
+line-height: 24px;
+padding: 8px 16px;
+text-align: center;
+    }
+    &_about{
+      height: 96px;
+      color: #575757;
+      line-height:24px;
+
+    }
+    &_user{
+      height: 150px;
+      color: #404040;
+
+    }
+  }
+}
