--- a/src/components/BlogIT/BlogDetail.scss
+++ b/src/components/BlogIT/BlogDetail.scss
@@ -3,7 +3,6 @@
   height: 2000px;
   color: #1b1b1b;
   font-size: 14px;
-  padding: 60px 0px 0px;
   text-align: left;
 
   &_upvote {
@@ -27,7 +26,8 @@
       display: flex;
       font-weight: 500;
       line-height: 14.4px;
-
+      padding-left:5px;
+      font-size: 29px;
     }
 
     &_share {
