fix:fix-create-Forum

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ html {
 }
 pre{
   background-color: #001e3c;
-  color: #1a2027;
+  color: #ffffff;
   border-radius:10px;
   font-family: monospace;
 }
